--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
                         </div>
                     </label> 
                     <input type="checkbox" class="nav_inputcheck" id="nav_menucheckbox">
-                    <div class="header_navwrapper">
-                        <ul class="header_nav grid wide">
-                            <li class="header_item"><a href="" class="header_link">Home</a></li>
-                            <li class="header_item header_item"><a href="" class="header_link">Our Days</a></li>
-                            <li class="header_item"><a href="" class="header_link">Our Story</a></li>
-                            <li class="header_item"><a href="" class="header_link">Events</a></li>
-                            <li class="header_item"><a href="" class="header_link">Gallery</a></li>
-                            <li class="header_item"><a href="" class="header_link">Contact</a></li>
-                        </ul>
-                    </div>
+                    <label for="nav_menucheckbox" class="header_navwrapper">
+                        <label for="nav_menucheckbox" class="header_nav grid wide">
+                            <li  class="header_item"><a href="#top" class="header_link">Home</a></li>
+                            <li class="header_item"><a href="#ourdays" class="header_link">Our Days</a></li>
+                            <li class="header_item"><a href="#ourstory" class="header_link">Our Story</a></li>
+                            <li class="header_item"><a href="#events" class="header_link">Events</a></li>
+                            <li class="header_item"><a href="#gallery" class="header_link">Gallery</a></li>
+                            <li class="header_item"><a href="#contact" class="header_link">Contact</a></li>
+                        </label>
+                    </label>
                 </div>
             </div>
         </header>
@@ -53,7 +53,7 @@
                                         <div class="title_normal title_red ">Phong</div>
                                         <div class="text text_center">Thai</div>
                                         <div class="introduction_icons">
-                                            <a href="" class="introduction_icon">
+                                            <a href="#Home" class="introduction_icon">
                                                 <i class="fa-brands fa-instagram"></i>
                                             </a>
                                             <a href="" class="introduction_icon">
@@ -106,42 +106,44 @@
                     </div>
                 </div>
             </div>
-            <div class="section">
-                <div class="time_wrapper grid wide">
-                    <div class="title_normal content_title">Monday, 28  <i class="title_red ">October</i> 2022</div>
-                    <div class="time_blockwrapper row">
-                        <div class="time_numberwrapper c-3 m-3 l-3">
-                            <div class="time_block">
-                                <div class="time_number">00</div>
-                                <div class="time_numbertitle">Day</div>
+            <div id="ourdays" class="section_wrapper">
+                <div class="section">
+                    <div class="time_wrapper grid wide">
+                        <div class="title_normal content_title">Monday, 28  <i class="title_red ">October</i> 2022</div>
+                        <div class="time_blockwrapper row">
+                            <div class="time_numberwrapper c-3 m-3 l-3">
+                                <div class="time_block">
+                                    <div class="time_number">00</div>
+                                    <div class="time_numbertitle">Day</div>
+                                </div>
+                            </div>
+                            <div class="time_numberwrapper c-3 m-3 l-3">
+                                <div class="time_block">
+                                    <div class="time_number">00</div>
+                                    <div class="time_numbertitle">Hour</div>
+                                </div>
+                            </div>
+                            <div class="time_numberwrapper c-3 m-3 l-3">
+                                <div class="time_block">
+                                    <div class="time_number">00</div>
+                                    <div class="time_numbertitle">Minute</div>
+                                </div>
+                            </div>
+                            <div class="time_numberwrapper c-3 m-3 l-3">
+                                <div class="time_block">
+                                    <div class="time_number">00</div>
+                                    <div class="time_numbertitle">Second</div>
+                                </div>
                             </div>
                         </div>
-                        <div class="time_numberwrapper c-3 m-3 l-3">
-                            <div class="time_block">
-                                <div class="time_number">00</div>
-                                <div class="time_numbertitle">Hour</div>
-                            </div>
-                        </div>
-                        <div class="time_numberwrapper c-3 m-3 l-3">
-                            <div class="time_block">
-                                <div class="time_number">00</div>
-                                <div class="time_numbertitle">Minute</div>
-                            </div>
-                        </div>
-                        <div class="time_numberwrapper c-3 m-3 l-3">
-                            <div class="time_block">
-                                <div class="time_number">00</div>
-                                <div class="time_numbertitle">Second</div>
-                            </div>
-                        </div>
+                        <p class="text text_padding">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In id tellus pretium quam sodales luctus. Nunc nec lacus ac arcu iaculis accumsan dictum a nulla. Nullam malesuada pellentesque turpis, eu elementum risus sagittis in. Nunc sit amet arcu justo.</p>
                     </div>
-                    <p class="text text_padding">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In id tellus pretium quam sodales luctus. Nunc nec lacus ac arcu iaculis accumsan dictum a nulla. Nullam malesuada pellentesque turpis, eu elementum risus sagittis in. Nunc sit amet arcu justo.</p>
                 </div>
             </div>
         </div>
 
         <!-- Our Story -->
-        <div class="section_wrapper background_grey">
+        <div id="ourstory" class="section_wrapper background_grey">
             <div class="section grid wide">
                 <div class="title_normal content_title">Our Story</div>
                 <div class=" ourstory">
@@ -155,8 +157,8 @@
                             <div class="ourstory_imgheartwrapper ">
                                 <img src="./assets/img/heart_img_story.png" alt="" class="ourstory_imgheart">
                                 <div class="ourstory_heartdate">
-                                    <p class="ourstory_year">2020</p>
-                                    <p class="ourstory month">April</p>
+                                    <p class="ourstory_year">2022</p>
+                                    <p class="ourstory month">Nov</p>
                                 </div>
                             </div>
                         </div>
@@ -179,8 +181,8 @@
                             <div class="ourstory_imgheartwrapper ">
                                 <img src="./assets/img/heart_img_story.png" alt="" class="ourstory_imgheart">
                                 <div class="ourstory_heartdate">
-                                    <p class="ourstory_year">2020</p>
-                                    <p class="ourstory month">April</p>
+                                    <p class="ourstory_year">2022</p>
+                                    <p class="ourstory month">Nov</p>
                                 </div>
                             </div>
                         </div>
@@ -201,8 +203,8 @@
                             <div class="ourstory_imgheartwrapper ">
                                 <img src="./assets/img/heart_img_story.png" alt="" class="ourstory_imgheart">
                                 <div class="ourstory_heartdate">
-                                    <p class="ourstory_year">2020</p>
-                                    <p class="ourstory month">April</p>
+                                    <p class="ourstory_year">2022</p>
+                                    <p class="ourstory month">Nov</p>
                                 </div>
                             </div>
                         </div>
@@ -218,36 +220,38 @@
             </div>
         </div>
         <!-- dating  -->
-        <div class="ceremony grid wide">
-            <div class="section">
-                <div class="title_normal">Our Dating Events</div>
-                <div class="text text_center text_padding">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In id tellus pretium quam sodales luctus. Nunc nec lacus ac arcu iaculis accumsan dictum a nulla. Nullam malesuada pellentesque turpis, eu elementum risus sagittis in. Nunc sit amet arcu justo.</div>
-                <div class="ceremony_itemwrapper row">
-                    <div class="ceremony_item col l-6 m-6 c-12">
-                        <div class="ceremony_imgwrapper">
-                            <img src="./assets/img/ceremony1.jpg" alt="" class="ceremony_img">
-                        </div>
-                        <div class="ceremony_title title_normal">The ceremony</div>
-                        <div class="ceremony_info">
-                            <div class="text"><i class="ceremony_icon fa-solid fa-calendar-days"></i>Saturday, 22 February 2020</div>
-                            <div class="text"><i class="ceremony_icon fa-solid fa-clock"></i>12:00 PM - 15:00 PM</div>
-                            <div class="text"><i class="ceremony_icon fa-solid fa-location-pin"></i>Some Street, Some City</div>
-                            <div class="button_wrapper">
-                                <a href="" class="button">View on Map</a>
+        <div id="events" class="ceremony grid wide">
+            <div class="section_wrapper">
+                <div class="section">
+                    <div class="title_normal">Our Dating Events</div>
+                    <div class="text text_center text_padding">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In id tellus pretium quam sodales luctus. Nunc nec lacus ac arcu iaculis accumsan dictum a nulla. Nullam malesuada pellentesque turpis, eu elementum risus sagittis in. Nunc sit amet arcu justo.</div>
+                    <div class="ceremony_itemwrapper row">
+                        <div class="ceremony_item col l-6 m-6 c-12">
+                            <div class="ceremony_imgwrapper">
+                                <img src="./assets/img/ceremony1.jpg" alt="" class="ceremony_img">
+                            </div>
+                            <div class="ceremony_title title_normal">The ceremony</div>
+                            <div class="ceremony_info">
+                                <div class="text"><i class="ceremony_icon fa-solid fa-calendar-days"></i>Unknown</div>
+                                <div class="text"><i class="ceremony_icon fa-solid fa-clock"></i>Unknown</div>
+                                <div class="text"><i class="ceremony_icon fa-solid fa-location-pin"></i>Viet Nam</div>
+                                <div class="button_wrapper">
+                                    <a href="" class="button">View on Map</a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="ceremony_item col l-6 m-6 c-12">
-                        <div class="ceremony_imgwrapper">
-                            <img src="./assets/img/ceremony2.jpg" alt="" class="ceremony_img">
-                        </div>
-                        <div class="ceremony_title title_normal">The Party</div>
-                        <div class="ceremony_info">
-                            <div class="text"><i class="ceremony_icon fa-solid fa-calendar-days"></i>Saturday, 22 February 2020</div>
-                            <div class="text"><i class="ceremony_icon fa-solid fa-clock"></i>12:00 PM - 15:00 PM</div>
-                            <div class="text"><i class="ceremony_icon fa-solid fa-location-pin"></i>Some Street, Some City</div>
-                            <div class="button_wrapper">
-                                <a href="" class="button">View on Map</a>
+                        <div class="ceremony_item col l-6 m-6 c-12">
+                            <div class="ceremony_imgwrapper">
+                                <img src="./assets/img/ceremony2.jpg" alt="" class="ceremony_img">
+                            </div>
+                            <div class="ceremony_title title_normal">The Party</div>
+                            <div class="ceremony_info">
+                                <div class="text"><i class="ceremony_icon fa-solid fa-calendar-days"></i>Unknown</div>
+                                <div class="text"><i class="ceremony_icon fa-solid fa-clock"></i>Unknown</div>
+                                <div class="text"><i class="ceremony_icon fa-solid fa-location-pin"></i>Viet Nam</div>
+                                <div class="button_wrapper">
+                                    <a href="" class="button">View on Map</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -255,7 +259,7 @@
             </div>
         </div>
         <!-- gallery -->
-        <div class="section_wrapper background_grey">
+        <div id="gallery" class="section_wrapper background_grey">
             <div class="section grid wide">
                 <div class="title_normal">Gallery</div>
                 <div class="gallery_wrapper row">
@@ -317,7 +321,7 @@
             </div>
         </div>
         <!-- RSVP -->
-        <div class="section_wrapper">
+        <div id="contact" class="section_wrapper">
             <div class="section grid wide">
                 <div class="title_normal">RSVP</div>
                 <div class="text text_padding">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In id tellus pretium quam sodales luctus. Nunc nec lacus ac arcu iaculis accumsan dictum a nulla. Nullam malesuada pellentesque turpis, eu elementum risus sagittis in. Nunc sit amet arcu justo.</div>
