--- a/index.html
+++ b/index.html
@@ -111,25 +111,25 @@
                     <div class="time_wrapper grid wide">
                         <div class="title_normal content_title">Monday, 28  <i class="title_red ">October</i> 2022</div>
                         <div class="time_blockwrapper row">
-                            <div class="time_numberwrapper c-3 m-3 l-3">
+                            <div class="time_numberwrapper col c-3 m-3 l-3">
                                 <div class="time_block">
                                     <div class="time_number">00</div>
                                     <div class="time_numbertitle">Day</div>
                                 </div>
                             </div>
-                            <div class="time_numberwrapper c-3 m-3 l-3">
+                            <div class="time_numberwrapper col c-3 m-3 l-3">
                                 <div class="time_block">
                                     <div class="time_number">00</div>
-                                    <div class="time_numbertitle">Hour</div>
+                                    <div class="time_numbertitle">Hours</div>
                                 </div>
                             </div>
-                            <div class="time_numberwrapper c-3 m-3 l-3">
+                            <div class="time_numberwrapper col c-3 m-3 l-3">
                                 <div class="time_block">
                                     <div class="time_number">00</div>
                                     <div class="time_numbertitle">Minute</div>
                                 </div>
                             </div>
-                            <div class="time_numberwrapper c-3 m-3 l-3">
+                            <div class="time_numberwrapper col c-3 m-3 l-3">
                                 <div class="time_block">
                                     <div class="time_number">00</div>
                                     <div class="time_numbertitle">Second</div>
