--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
                                         <div class="title_normal title_red ">Phong</div>
                                         <div class="text text_center">Thai</div>
                                         <div class="introduction_icons">
-                                            <a href="#Home" class="introduction_icon">
+                                            <a href="https://www.instagram.com/phongthai1082004/" class="introduction_icon">
                                                 <i class="fa-brands fa-instagram"></i>
                                             </a>
-                                            <a href="" class="introduction_icon">
+                                            <a href="https://www.facebook.com/phongthai1082004/" class="introduction_icon">
                                                 <i class="fa-brands fa-square-facebook"></i>
                                             </a>
                                             <a href="" class="introduction_icon">
-                                                <i class="fa-brands fa-instagram"></i>
+                                                <i class="fa-brands fa-twitter"></i>
                                             </a>
                                     </div>
                                     </div>
@@ -83,14 +83,14 @@
                                         <div class="title_normal title_red ">Yen</div>
                                         <div class="text text_center">Hoang</div>
                                         <div class="introduction_icons">
-                                            <a href="" class="introduction_icon">
+                                            <a href="#" class="introduction_icon">
                                                 <i class="fa-brands fa-instagram"></i>
                                             </a>
                                             <a href="" class="introduction_icon">
                                                 <i class="fa-brands fa-square-facebook"></i>
                                             </a>
                                             <a href="" class="introduction_icon">
-                                                <i class="fa-brands fa-instagram"></i>
+                                                <i class="fa-brands fa-twitter"></i>
                                             </a>
                                     </div>
                                     </div>
