--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                     </div>
                 </div>
             </div>
-            <button class="button">Submit</button>
+            <a class="button">Submit</a>
         </div>
         <footer class="footer">
             <div class="title_big title_white footer_title">Thank You!</div>
