--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
+    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
 </head>
 <link rel="stylesheet" href="./assets/font/fontawesome-free-6.2.1-web/css/all.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
