--- a/index.html
+++ b/index.html
@@ -346,7 +346,9 @@
                     </div>
                 </div>
             </div>
-            <a class="button">Submit</a>
+            <div class="button_wrapper">
+                <a href="" class="button">submit</a>
+            </div>
         </div>
         <footer class="footer">
             <div class="title_big title_white footer_title">Thank You!</div>
