--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="headerwrapper grid wide">
                 <div class="headermain">
                     <h1 class="header_name">Phong<i class="title_red ">&  </i>Keo</h1>
-                    <h2 class="header_title">Monday, 28 <i class="title_red">October</i> 2022</h2>
+                    <h2 class="header_title">El lunes, El 28 de <i class="title_red">Octubre</i> 2022</h2>
                     <!-- nav mobile -->
                     <label for="nav_menucheckbox" class="header_navmenu">
                         <div class="header_navmenuicon">
@@ -45,7 +45,7 @@
         <div class="content">
             <div class="introduction_wrapper">
                 <div class="introduction">
-                    <h1 class="introduction_title title_big title_white">We're Dating</h1>
+                    <h1 class="introduction_title title_big title_white">Nosotros estamos saliendo</h1>
                     <div class="introduction_story row">
                         <div class="introduction_person col l-5 m-5 c-12">
                             <div class="introduction_info">
@@ -110,30 +110,30 @@
             <div id="ourdays" class="section_wrapper">
                 <div class="section">
                     <div class="time_wrapper grid wide">
-                        <div class="title_normal content_title">Monday, 28  <i class="title_red ">October</i> 2022</div>
+                        <div class="title_normal content_title">El lunes, El 28 de <i class="title_red ">Octubre</i> 2022</div>
                         <div class="time_blockwrapper row">
                             <div class="time_numberwrapper col c-3 m-3 l-3">
                                 <div class="time_block">
                                     <div class="time_number">00</div>
-                                    <div class="time_numbertitle">Day</div>
+                                    <div class="time_numbertitle">Días</div>
                                 </div>
                             </div>
                             <div class="time_numberwrapper col c-3 m-3 l-3">
                                 <div class="time_block">
                                     <div class="time_number">00</div>
-                                    <div class="time_numbertitle">Hours</div>
+                                    <div class="time_numbertitle">Horas</div>
                                 </div>
                             </div>
                             <div class="time_numberwrapper col c-3 m-3 l-3">
                                 <div class="time_block">
                                     <div class="time_number">00</div>
-                                    <div class="time_numbertitle">Minute</div>
+                                    <div class="time_numbertitle">Minutos</div>
                                 </div>
                             </div>
                             <div class="time_numberwrapper col c-3 m-3 l-3">
                                 <div class="time_block">
                                     <div class="time_number">00</div>
-                                    <div class="time_numbertitle">Second</div>
+                                    <div class="time_numbertitle">Segundos</div>
                                 </div>
                             </div>
                         </div>
@@ -145,7 +145,7 @@
         <!-- Our Story -->
         <div id="ourstory" class="section_wrapper background_grey">
             <div class="section grid wide">
-                <div class="title_normal content_title">Our Story</div>
+                <div class="title_normal content_title">Nuestros Cuentos</div>
                 <div class=" ourstory">
                     <div class="ourstory_part row">
                         <div class="ourstory_imgwrapper col l-5 m-5 c-12">
@@ -223,20 +223,20 @@
         <div id="events" class="ceremony grid wide">
             <div class="section_wrapper">
                 <div class="section">
-                    <div class="title_normal">Our Dating Events</div>
+                    <div class="title_normal">Nuestros Eventos de Citas</div>
                     <div class="text text_center text_padding">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In id tellus pretium quam sodales luctus. Nunc nec lacus ac arcu iaculis accumsan dictum a nulla. Nullam malesuada pellentesque turpis, eu elementum risus sagittis in. Nunc sit amet arcu justo.</div>
                     <div class="ceremony_itemwrapper row">
                         <div class="ceremony_item col l-6 m-6 c-12">
                             <div class="ceremony_imgwrapper">
                                 <img src="./assets/img/ceremony1.jpg" alt="" class="ceremony_img">
                             </div>
-                            <div class="ceremony_title title_normal">The ceremony</div>
+                            <div class="ceremony_title title_normal">La Ceremonia</div>
                             <div class="ceremony_info">
                                 <div class="text"><i class="ceremony_icon fa-solid fa-calendar-days"></i>Unknown</div>
                                 <div class="text"><i class="ceremony_icon fa-solid fa-clock"></i>Unknown</div>
                                 <div class="text"><i class="ceremony_icon fa-solid fa-location-pin"></i>Viet Nam</div>
                                 <div class="button_wrapper">
-                                    <a href="" class="button">View on Map</a>
+                                    <a href="" class="button">Ver en El Mapa</a>
                                 </div>
                             </div>
                         </div>
@@ -244,13 +244,14 @@
                             <div class="ceremony_imgwrapper">
                                 <img src="./assets/img/ceremony2.jpg" alt="" class="ceremony_img">
                             </div>
-                            <div class="ceremony_title title_normal">The Party</div>
+                            <div class="ceremony_title title_normal">
+                                La Fiesta</div>
                             <div class="ceremony_info">
                                 <div class="text"><i class="ceremony_icon fa-solid fa-calendar-days"></i>Unknown</div>
                                 <div class="text"><i class="ceremony_icon fa-solid fa-clock"></i>Unknown</div>
                                 <div class="text"><i class="ceremony_icon fa-solid fa-location-pin"></i>Viet Nam</div>
                                 <div class="button_wrapper">
-                                    <a href="" class="button">View on Map</a>
+                                    <a href="" class="button">Ver en El Mapa</a>
                                 </div>
                             </div>
                         </div>
@@ -261,7 +262,8 @@
         <!-- gallery -->
         <div id="gallery" class="section_wrapper background_grey">
             <div class="section grid wide">
-                <div class="title_normal">Gallery</div>
+                <div class="title_normal">
+                    La Galeria</div>
                 <div class="gallery_wrapper row">
                     <div class="gallery_item col l-4 m-4 c-6">
                         <div class="gallery_imgwrapper">
@@ -328,30 +330,31 @@
                 <div class="contactform row">
                     <div class="form_box col l-6 m-6 c-12">
                         <div class="form_group">
-                            <input type="text" class="form_control" placeholder="Full Name" required="required">
+                            <input type="text" class="form_control" placeholder="Nombre Completo" required="required">
                             <i class="fa-solid fa-user"></i>
                         </div>
                         <div class="form_group">
-                            <input type="email" class="form_control" placeholder="Email Address" required="required">
+                            <input type="email" class="form_control" placeholder="Dirección de Correo Electrónico" required="required">
                             <i class="fa-solid fa-envelope"></i>
                         </div>
                         <div class="form_group">
-                            <input type="text" class="form_control" placeholder="Full Name" required="required">
+                            <input type="text" class="form_control" placeholder="El Número de Teléfono" required="required">
                             <i class="fa-solid fa-phone"></i>
                         </div>
                     </div>
                     <div class="form_group form_groupmessage col l-6 m-6 c-12">
-                        <textarea name="" id="" cols="30" rows="11" class="form_control" placeholder="Leave Your Message"></textarea>
+                        <textarea name="" id="" cols="30" rows="11" class="form_control" placeholder="Deja Tu Mensaje"></textarea>
                         <i class="fa-solid fa-message"></i>
                     </div>
                 </div>
             </div>
             <div class="button_wrapper">
-                <a href="" class="button">submit</a>
+                <a href="" class="button">
+                    Enviar</a>
             </div>
         </div>
         <footer class="footer">
-            <div class="title_big title_white footer_title">Thank You!</div>
+            <div class="title_big title_white footer_title">Gracias!</div>
         </footer>
     </div>
 </body>
